# invaders_must_die

./: README.md
invaders-must-die/: .gitmodules  CMakeLists.txt  common.cmake  example.yar  main.cpp  rules.yar  setperm.sh
invaders-must-die/include/: errors.h  ip.h
invaders-must-die/src/console_sender/: CMakeLists.txt  console_sender.cpp  console_sender.hpp
invaders-must-die/src/detector/: CMakeLists.txt  DException.hpp  ISender.cpp  ISender.hpp  detector.cpp  detector.hpp
invaders-must-die/src/grpc_sender/: CMakeLists.txt  alert.grpc.pb.cc  alert.grpc.pb.h  alert.pb.cc  alert.pb.h  grpc_sender.cc  grpc_sender.h  includes.h
invaders-must-die/src/grpc_sender/proto/: alert.proto
invaders-must-die/src/log.c/: CMakeLists.txt  log.h
omen/: .dockerignore  .gitignore  Dockerfile  app.py  compose.yml  init_db.py  requirements.txt
omen/proto/: alert.proto
omen/templates/: alerts.html  index.html  login.html
source/: CMakeLists.txt  README.md  main.cpp
source/log.c/: CMakeLists.txt
stand-up/: .dockerignore  .gitignore  Dockerfile  app.py  compose.yml  config.py
stand-up/sql/: alerts.sql
